--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Manikantha | Full Stack Developer</title>
+  <title>Manikantha | Full-Stack Developer in Training | Java | SQL | Web Development</title>
   
   <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
@@ -37,15 +37,15 @@
   </header>
 
   <section class="hero" data-aos="fade-up">
-    <img src="assets/manikantha.png" alt="Harshad Profile" class="profile-img" data-aos="zoom-in" data-aos-delay="200" />
+    <img src="assets/manikantha.png" alt="Manikantha Profile" class="profile-img" data-aos="zoom-in" data-aos-delay="200" />
     <h1 data-aos="fade-right" data-aos-delay="400">Hi, I'm Manikantha.</h1>
 
-    <p data-aos="fade-left" data-aos-delay="600">Full Stack Developer </p>
-    <a href="https://github.com/Harshad03-GN/Harshad_Portfolio/raw/main/resume.pdf"
+    <p data-aos="fade-left" data-aos-delay="600">Full-Stack Developer in Training | Java | SQL | Web Development </p>
+    <a href="https://drive.google.com/file/d/1--hxiQAybSRSYW_IrFkiQRdcHfJZjo2C/view?usp=drivesdk"
    class="btn"
    data-aos="zoom-in"
    data-aos-delay="800"
-   download="Harshad_Resume.pdf">
+   download="Manikantha_Resume.pdf">
    view Resume
 </a>
 
@@ -60,9 +60,9 @@
     <h2>Tech Stack</h2>
     <div class="icons">
       <i class="devicon-python-plain colored"></i>
-      <i class="devicon-amazonwebservices-plain colored"></i> 
+  <!--<i class="devicon-amazonwebservices-plain colored"></i> 
       <i class="devicon-azure-plain colored"></i>
-      <i class="devicon-docker-plain colored"></i>
+      <i class="devicon-docker-plain colored"></i>-->
       <i class="devicon-github-original colored"></i>
       <i class="devicon-linux-plain colored"></i>
       <i class="devicon-javascript-plain colored"></i>
@@ -135,7 +135,7 @@
     </div>
 
     <div class="footer-right">
-      <p>Email: <a href="mailto:nharshad26@outloo.com">manikanthahangal@gmail.com</a></p>
+      <p>Email: <a href="mailto:manikanthahanagal@gmail.com">manikanthahangal@gmail.com</a></p>
       <p>GitHub: <a href="https://github.com/Harshad03-GN" target="_blank">Harshad03-GN</a></p>
     </div>
   </div>
